[gd_scene load_steps=6 format=3 uid="uid://cridc2gxsiypr"]

[ext_resource type="Script" path="res://src/Object/Weapon/weapon.gd" id="1_l5lug"]
[ext_resource type="PackedScene" uid="uid://r5ejt1scfovy" path="res://src/Object/Weapon/bullet.tscn" id="2_10q1i"]
[ext_resource type="Texture2D" uid="uid://b8v404uamo8vn" path="res://asset/Weapons/Weapons/weaponR1.png" id="3_1y7td"]
[ext_resource type="Texture2D" uid="uid://dg3dtfbdvcc2" path="res://asset/Weapons/effect/muzzle.png" id="4_utqwj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wy5g7"]
size = Vector2(12.5, 3.75)

[node name="Weapon" type="StaticBody2D"]
position = Vector2(1.19209e-07, -1.19209e-07)
script = ExtResource("1_l5lug")
bullet = ExtResource("2_10q1i")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.977316, -10.0519)
scale = Vector2(0.0181514, 0.0184138)
texture = ExtResource("3_1y7td")
centered = false
offset = Vector2(-1000, -1000)

[node name="ShotPosition" type="Marker2D" parent="."]
position = Vector2(16.25, -1.25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6.25, -1.25)
shape = SubResource("RectangleShape2D_wy5g7")
disabled = true

[node name="BulletContainer" type="Node" parent="."]

[node name="Shot_weapon_time" type="Timer" parent="."]
one_shot = true

[node name="Interval_bullet" type="Timer" parent="."]
one_shot = true

[node name="Reload_weapon_time" type="Timer" parent="."]
one_shot = true

[node name="Muzzle" type="Sprite2D" parent="."]
visible = false
position = Vector2(22, -2)
scale = Vector2(0.00786164, 0.00797527)
texture = ExtResource("4_utqwj")
centered = false
offset = Vector2(-1000, -1000)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 9
text = "ssssssssssssss
ddddddddddd
fffffffffffffffffffffffff
fffffff"

[connection signal="timeout" from="Shot_weapon_time" to="." method="_on_shot_weapon_time_timeout"]
[connection signal="timeout" from="Reload_weapon_time" to="." method="_on_reload_weapon_time_timeout"]
